Feat: Make changes in the structure for accepting the query by adding the constraints Not Null and Unique.